Bug 14485 - System lockup running "cat /sys/kernel/debug/dri/0/i915_regs"
Summary: System lockup running "cat /sys/kernel/debug/dri/0/i915_regs"
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 high
Assignee: Jesse Barnes
URL:
Keywords:
Depends on:
Blocks: 14230
  Show dependency tree
 
Reported: 2009-10-26 18:17 UTC by Rafael J. Wysocki
Modified: 2010-01-10 22:27 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.32-rc5-git3
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2009-10-26 18:17:53 UTC
Subject    : 2.6.32-rc5-git3 -- System lockup running "cat /sys/kernel/debug/dri/0/i915_regs"
Submitter  : Miles Lane <miles.lane@gmail.com>
Date       : 2009-10-26 4:00
References : http://marc.info/?l=linux-kernel&m=125652968117713&w=4

This entry is being used for tracking a regression from 2.6.31.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Jesse Barnes 2009-12-02 19:18:07 UTC
Zhenyu, I think you mentioned you would fix this one?  I don't think it's a high prio since it's just a debug file, but hanging is pretty unfriendly.
Comment 2 zhenyuw 2009-12-28 03:55:38 UTC
Sorry for missed this one for long time. I was thinking at lease we need to ask for explicitly enable all regs reading before actually doing so, but now I wonder who is the real user of this debug? If something really need that, we can do it totally in intel-gpu-tools instead of exposing this in kernel which is danger. 

So I think we should remove that completely.
Comment 3 zhenyuw 2010-01-08 04:51:16 UTC
Patch is in Linus tree.
commit 823f68fd646da6a39a9c0d3eb4c60d69dab5aa13
Author: Zhenyu Wang <zhenyuw@linux.intel.com>
Date:   Mon Dec 28 13:23:36 2009 +0800

    drm/i915: remove full registers dump debug
    
    This one reverts 9e3a6d155ed0a7636b926a798dd7221ea107b274.
    As reported by http://bugzilla.kernel.org/show_bug.cgi?id=14485,
    this dump will cause hang problem on some machine. If something
    really needs this kind of full registers dump, that could be done
    within intel-gpu-tools.
    
    Cc: Ben Gamari <bgamari.foss@gmail.com>
    Signed-off-by: Zhenyu Wang <zhenyuw@linux.intel.com>
    Signed-off-by: Eric Anholt <eric@anholt.net>
Comment 4 Jesse Barnes 2010-01-08 16:28:46 UTC
Patch is upstream, closing.

Note You need to log in before you can comment on or make changes to this bug.